--- a/animations.html
+++ b/animations.html
@@ -12,6 +12,7 @@
 
     <h1 class="titre" id="principal" style="color: aqua;">animation</h1>
     <div id="ghost"></div>
+    <div id="animation2"></div>
     
 </body>
 </html>
